# yi-hot-monitor

./: .env.docker  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  run.py  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 00bdfc301cb8_add_reason_to_hotspots.py  0fa270ac6880_add_author_avatar_to_hotspots.py  434d27dc9325_add_author_fields_to_hotspots.py  afb09b029dfb_init.py  b7bc2fefd833_add_coin_favorite_count_to_hotspots.py  c78892e7fe20_add_comment_count_to_hotspots.py
backend/app/: config.py  database.py  main.py  redis.py  websocket.py
backend/app/api/: hotspots.py  keywords.py  notifications.py  settings.py  stats.py
backend/app/jobs/: __init__.py  hotspot_checker.py
backend/app/models/: __init__.py
backend/app/schemas/: schemas.py
backend/app/services/: account_detector.py  ai.py  china_search.py  rate_limit.py  scanner.py  search.py  twitter.py
backend/tests/: test_models.py
design/: index.html  keywords.html  notifications.html  settings.html
docs/: API_INTEGRATION.md  DOCKER.md  LOCAL_SETUP.md  README.md  REDIS.md  REQUIREMENTS.md
frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardToolbar.tsx  FilterPanel.tsx  HotspotCard.tsx  Layout.tsx  NewContentToast.tsx  StatsBar.tsx
frontend/src/hooks/: useHotspots.ts  useTheme.tsx  useWebSocket.ts
skills/hotspot-scraper/: SKILL.md
(+19 files in other folders)
